Fix Vercel function config

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,6 @@
     "version": 2,
     "framework": null,
     "functions": {
-        "api/*.php": { "runtime": "vercel-php@0.6.0" },
         "public/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
@@ -21,7 +20,7 @@
     ],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
+        "APP_DEBUG": "false",
         "APP_URL": "https://${VERCEL_URL}",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
@@ -34,4 +33,3 @@
         "SESSION_DRIVER": "cookie"
     }
 }
-
